--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,7 +22,7 @@
           android:background="@drawable/edit_text_background"
           android:ems="10"
 
-          android:hint="Электронная почта"
+          android:hint="@string/email"
           android:minHeight="48dp"
           android:inputType="textEmailAddress"
 
@@ -37,7 +37,7 @@
           android:layout_marginTop="21dp"
           android:background="@drawable/edit_text_background"
           android:ems="10"
-          android:hint="Пароль"
+          android:hint="@string/password"
           android:inputType="textPassword"
           android:minHeight="48dp"
           app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
           android:layout_height="wrap_content"
           android:backgroundTint="@color/purple_2"
           android:fontFamily="@font/button_font"
-          android:text="Войти"
+          android:text="@string/log_in"
           android:textSize="20sp"
           app:cornerRadius="30dp"
           app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
           android:layout_height="wrap_content"
           android:backgroundTint="@color/purple_2"
           android:fontFamily="@font/button_font"
-          android:text="Забыли пароль?"
+          android:text="@string/forgot_password"
           android:textSize="20sp"
           app:cornerRadius="30dp"
           app:layout_constraintBottom_toBottomOf="parent"
