--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -14,13 +14,14 @@
         android:layout_height="52dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:hint="Электронная почта"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextFields" />
 
     <Button
         android:id="@+id/reset_password_button"
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="Изменить пароль"
+        android:text="@string/update_password"
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +42,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="Назад"
+        android:text="@string/back"
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
