--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,7 @@
         android:layout_height="70dp"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="Изменить пароль"
+        android:text="@string/update_password"
         android:textAlignment="center"
         android:textSize="20sp"
         app:cornerRadius="30dp"
@@ -85,7 +85,7 @@
         android:layout_height="70dp"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="выйти из аккаунта"
+        android:text="@string/log_out"
         android:textAlignment="center"
         android:textSize="20sp"
         app:cornerRadius="30dp"
@@ -98,7 +98,7 @@
         android:layout_height="70dp"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="Сохранить изменения"
+        android:text="@string/save_changes"
         android:textAlignment="center"
         android:textSize="20sp"
         app:cornerRadius="30dp"
@@ -113,7 +113,7 @@
         android:ems="10"
         android:fontFamily="@font/button_font"
         android:textAlignment="center"
-        android:hint="Имя"
+        android:hint="@string/name"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:inputType="textPersonName"
@@ -150,7 +150,7 @@
         android:layout_height="70dp"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="Удалить аккаунт"
+        android:text="@string/delete_account"
         android:textAlignment="center"
         android:textSize="20sp"
         app:cornerRadius="30dp"
