--- a/app/src/main/res/layout/fragment_games_menu.xml
+++ b/app/src/main/res/layout/fragment_games_menu.xml
@@ -45,7 +45,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/purple_2"
                 android:fontFamily="@font/button_font"
-                android:text="@string/drawing"
+                android:text="@string/repeat_drawing"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp"
@@ -71,7 +71,7 @@
             android:layout_height="86dp"
             android:backgroundTint="@color/purple_2"
             android:fontFamily="@font/button_font"
-            android:text="Назад"
+            android:text="@string/back"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:cornerRadius="30dp"
