--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Логин"
+            android:hint="@string/login"
             android:background="@drawable/edit_text_background"
             android:inputType="textPersonName"
             android:minHeight="48dp"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="26dp"
             android:ems="10"
-            android:hint="Электронная почта"
+            android:hint="@string/email"
             android:background="@drawable/edit_text_background"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:ems="10"
-            android:hint="Пароль"
+            android:hint="@string/password"
             android:background="@drawable/edit_text_background"
             android:inputType="textPassword"
             android:minHeight="48dp"
@@ -63,7 +63,7 @@
             android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Зарегистрироваться"
+            android:text="@string/sign_up"
             android:backgroundTint="@color/purple_2"
             android:fontFamily="@font/button_font"
             android:textSize="20sp"
