--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     tools:context=".authorization.SignUpFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -63,6 +64,7 @@
             android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="15sp"
             android:text="@string/sign_up"
             android:backgroundTint="@color/purple_2"
             android:fontFamily="@font/button_font"
