--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -73,15 +73,15 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/user_button"
-        android:layout_width="246dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/textview_color"
         android:fontFamily="@font/button_font"
         android:text="Name\nRating: 100"
         android:textAlignment="textStart"
+        android:textAllCaps="false"
         android:textColor="#00838F"
         android:textSize="20sp"
-        android:textAllCaps="false"
         app:cornerRadius="10sp"
         app:icon="@drawable/ic_user"
         app:iconSize="50sp"
@@ -89,6 +89,67 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/records_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="160dp"
+        android:visibility="invisible"
+
+        app:layout_constraintBottom_toTopOf="@+id/main_buttons_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_button"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/record1_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/button_font"
+            android:text="шуткщщоатцшщугк"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/record2_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/records_layout_label" />
+
+        <TextView
+            android:id="@+id/record2_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/button_font"
+            android:text="довагшгук"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/records_layout_label" />
+
+        <TextView
+            android:id="@+id/record3_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/button_font"
+            android:text="длтшгушмугки"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/record2_text" />
+
+        <TextView
+            android:id="@+id/records_layout_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/button_font"
+            android:text="@string/best_scores"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ProgressBar
         android:id="@+id/account_loading_progress"
@@ -101,49 +162,11 @@
         app:layout_constraintTop_toTopOf="@+id/user_button" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/records_layout"
-        android:layout_width="218dp"
-        android:layout_height="146dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/main_buttons_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_button">
-
-        <TextView
-            android:id="@+id/record1_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/record2_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/record3_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/record1_text" />
-
-        <TextView
-            android:id="@+id/record3_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/leaderboard_layout"
-        android:layout_width="376dp"
-        android:layout_height="441dp"
-        android:background="@color/purple_2"
+        android:layout_width="377dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/leaderboard_rounded_corners"
+
         android:clickable="true"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/games_content"
@@ -157,12 +180,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginVertical="10sp"
             android:background="@drawable/textview_rounded_corner"
             android:fontFamily="@font/button_font"
             android:gravity="center"
             android:padding="10sp"
-            android:text="@string/leaderboard"
             android:textSize="20sp"
+            android:text="@string/leaderboard"
             app:layout_constraintBottom_toTopOf="@+id/leaderboard_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -182,8 +206,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/leaderboard_view"
             android:layout_width="410dp"
-            android:layout_height="349dp"
-            android:background="@color/white"
+            android:layout_height="400dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
