--- a/app/src/main/res/layout/fragment_game_description.xml
+++ b/app/src/main/res/layout/fragment_game_description.xml
@@ -23,12 +23,12 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/back_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="68dp"
                 android:layout_below="@+id/description_text"
                 android:layout_centerHorizontal="true"
                 android:layout_marginHorizontal="50dp"
-                android:layout_marginTop="58dp"
+                android:layout_marginTop="38dp"
                 android:backgroundTint="@color/purple_2"
                 android:fontFamily="@font/button_font"
                 android:text="@string/back"
@@ -49,12 +49,12 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/start_game_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="68dp"
                 android:layout_below="@+id/back_button"
                 android:layout_centerHorizontal="true"
                 android:layout_marginHorizontal="50dp"
-                android:layout_marginTop="-1dp"
+                android:layout_marginTop="-3dp"
                 android:backgroundTint="@color/purple_2"
                 android:fontFamily="@font/button_font"
                 android:text="@string/start_game"
