--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -19,16 +19,16 @@
             android:background="@drawable/textview_rounded_corner"
             android:fontFamily="@font/button_font"
             android:padding="20dp"
-            android:text="@string/best_game_score"
             android:textSize="20sp"
+            android:text="@string/best_game_score"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/restart_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="151dp"
+            android:layout_height="77dp"
             android:layout_marginTop="1dp"
             android:backgroundTint="@color/purple_2"
             android:fontFamily="@font/button_font"
@@ -41,8 +41,8 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/to_menu_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="151dp"
+            android:layout_height="77dp"
             android:layout_marginTop="24dp"
             android:backgroundTint="@color/purple_2"
             android:fontFamily="@font/button_font"
