--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     tools:context=".authorization.LoginFragment">
 
    <androidx.constraintlayout.widget.ConstraintLayout
-       android:layout_width="307dp"
-       android:layout_height="245dp"
+       android:layout_width="328dp"
+       android:layout_height="241dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
 
@@ -23,8 +25,8 @@
           android:ems="10"
 
           android:hint="@string/email"
-          android:minHeight="48dp"
           android:inputType="textEmailAddress"
+          android:minHeight="48dp"
 
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -51,26 +53,26 @@
           android:layout_height="wrap_content"
           android:backgroundTint="@color/purple_2"
           android:fontFamily="@font/button_font"
+          android:padding="15sp"
           android:text="@string/log_in"
-          android:textSize="20sp"
-          app:cornerRadius="30dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/password_field" />
-
-      <Button
-          android:id="@+id/to_reset_password_fragment_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:backgroundTint="@color/purple_2"
-          android:fontFamily="@font/button_font"
-          android:text="@string/forgot_password"
           android:textSize="20sp"
           app:cornerRadius="30dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/sing_in_button" />
+          app:layout_constraintStart_toStartOf="parent" />
+
+      <Button
+          android:id="@+id/to_reset_password_fragment_button"
+          style="@style/Widget.MaterialComponents.Button.TextButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:fontFamily="@font/button_font"
+          android:text="@string/forgot_password"
+          android:textColor="@color/white"
+          android:textSize="15sp"
+          app:cornerRadius="30dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/password_field" />
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
