--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -27,9 +27,12 @@
         android:id="@+id/reset_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:text="@string/update_password"
+        android:padding="15sp"
+        android:text="@string/send_password_reset_email"
+
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,9 +46,25 @@
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
         android:text="@string/back"
+        android:padding="15sp"
         android:textSize="20sp"
         app:cornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/button_font"
+        android:padding="20dp"
+        android:text="@string/reset_password"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/email_for_password_reset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reset_password_button" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.89" />
 </androidx.constraintlayout.widget.ConstraintLayout>
