--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,57 +14,71 @@
         android:id="@+id/edit_password_button"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:backgroundTint="@color/purple_2"
+       android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
         android:text="@string/update_password"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:cornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/line2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_name" />
+        app:layout_constraintTop_toBottomOf="@+id/line1" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="288dp"
-        android:layout_height="122dp"
-        android:background="@color/textview_color"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/purple_button_rounded_corner"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/line1"
+        android:padding="10sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/game_record_1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/button_font"
             android:text="TextView"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/game_record_2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/button_font"
             android:text="TextView"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/game_record_3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/game_record_1" />
 
         <TextView
             android:id="@+id/game_record_3"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/button_font"
             android:text="TextView"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -89,8 +103,10 @@
         android:textAlignment="center"
         android:textSize="20sp"
         app:cornerRadius="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line2" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/save_changes_button"
@@ -104,7 +120,8 @@
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/line2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_password_button" />
 
     <EditText
         android:id="@+id/edit_name"
@@ -112,26 +129,28 @@
         android:layout_height="40dp"
         android:ems="10"
         android:fontFamily="@font/button_font"
-        android:textAlignment="center"
         android:hint="@string/name"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/edit_password_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line1" />
+        app:layout_constraintTop_toBottomOf="@+id/line1"
+        app:layout_constraintVertical_bias="0.311" />
 
     <View
         android:id="@+id/line1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:layout_marginTop="16dp"
         android:background="#c0c0c0"
-        app:layout_constraintBottom_toBottomOf="@+id/save_changes_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <View
         android:id="@+id/line2"
@@ -152,9 +171,26 @@
         android:fontFamily="@font/button_font"
         android:text="@string/delete_account"
         android:textAlignment="center"
+        android:textColor="@color/red"
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/best_scores"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:fontFamily="@font/button_font"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
