--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -11,12 +11,16 @@
         android:layout_width="68dp"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:textColor="@color/white"
+        android:fontFamily="@font/button_font"
+        android:textSize="20sp"
         android:text="1" />
 
     <ImageView
         android:id="@+id/user_image"
         android:layout_width="86dp"
-        android:layout_height="39dp"
+        android:layout_height="wrap_content"
+        android:paddingVertical="10dp"
         tools:srcCompat="@drawable/ic_user" />
 
     <TextView
@@ -25,6 +29,9 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical"
+        android:textColor="@color/white"
+        android:fontFamily="@font/button_font"
+        android:textSize="20sp"
         android:text="Имя" />
 
     <TextView
@@ -33,5 +40,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
+        android:textColor="@color/white"
+        android:fontFamily="@font/button_font"
+        android:textSize="20sp"
         android:text="Очки" />
 </LinearLayout>
