--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    tools:context="com.sumsung.braindash.com.sumsung.braindash.authorization.PasswordResetFragment">
+    tools:context="com.sumsung.braindash.authorization.PasswordResetFragment">
 
 
     <EditText
@@ -30,7 +30,6 @@
         android:layout_marginTop="12dp"
         android:backgroundTint="@color/purple_2"
         android:fontFamily="@font/button_font"
-        android:padding="15sp"
         android:text="@string/send_password_reset_email"
 
         android:textSize="20sp"
