--- a/app/src/main/res/layout/fragment_calculate_expression_game.xml
+++ b/app/src/main/res/layout/fragment_calculate_expression_game.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
-    tools:context="com.sumsung.braindash.com.sumsung.braindash.mainmenu.games.calculateexpressiongame.CalculateExpressionGameFragment">
+    tools:context="com.sumsung.braindash.mainmenu.games.calculateexpressiongame.CalculateExpressionGameFragment">
 
 
     <LinearLayout
