--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background"
-    tools:context="com.sumsung.braindash.com.sumsung.braindash.mainmenu.games.GameActivity">
+    tools:context="com.sumsung.braindash.mainmenu.games.GameActivity">
 
 
     <FrameLayout
