--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:background="@drawable/gradient_background"
-    tools:context="com.sumsung.braindash.com.sumsung.braindash.authorization.AuthorizationFragment">
+    tools:context="com.sumsung.braindash.authorization.AuthorizationFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
